--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -122,7 +122,7 @@
 
   <%# 商品一覧 %>
   <div class='item-contents'>
-     
+
        <h2 class='title'>ピックアップカテゴリー</h2>
         <%= link_to '新規投稿商品', "#", class: "subtitle" %>
         <ul class='item-lists'>
@@ -135,13 +135,12 @@
               <%= image_tag item.image, class: "item-img" %>
 
               <%# 商品が売れていればsold outを表示しましょう %>
-              <%# if %>
-              <div class='sold-out'>
-                <span>Sold Out!!</span>
-              </div>
-              <%# end %>
+              <% if item.order.present? %>
+                 <div class='sold-out'>
+                 <span>Sold Out!!</span>
+                </div>
+              <% end %>
               <%# //商品が売れていればsold outを表示しましょう %>
-
 
             </div>
             <div class='item-info'>
@@ -157,10 +156,8 @@
               </div>
             </div>
           <% end %>
-
-
+        </li>
       <% end %>
-      </li>
       
       <% else %>
      
@@ -181,9 +178,9 @@
             </div>
           </div>
         <% end %>
-      <% end %>
-      </li>
       
+      </li>
+      <% end %>
     </ul>
   </div>
   <%# /商品一覧 %>
