--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -25,7 +25,7 @@
     </div>
 
     
-  <% if user_signed_in? %>
+  <% if user_signed_in? && @item.order.nil? %>   
    <%  if current_user.id == @item.user_id %>
     <%= link_to "商品の編集",edit_item_path(@item) , method: :get, class: "item-red-btn" %>
     <p class="or-text">or</p>
@@ -33,7 +33,7 @@
   <% else %>
     <%# 商品が売れていない場合はこちらを表示しましょう %>
     
-    <%= link_to "購入画面に進む",item_orders_paht(@item),class:"item-red-btn"%>
+    <%= link_to "購入画面に進む",item_orders_path(@item.id),class:"item-red-btn"%>
     <%# //商品が売れていない場合はこちらを表示しましょう %>
     
    <% end %>
